--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="github-link"><a href="https://github.com/0xbitcorn/MockIronman">https://github.com/0xbitcorn/MockIronman</a></div>
     <div class="progress-section" id="progress-capture-area">
         <div class="goal-toggle-container">
             <label class="goal-toggle-label" for="goal-toggle-input">HALF</label>
