--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mock Ironman Progress</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="github-link"><a href="https://github.com/0xbitcorn/MockIronman">https://github.com/0xbitcorn/MockIronman</a></div>
@@ -63,8 +64,8 @@
     </div>
 
     <div class="share-section">
-        <button id="generate-image-btn">Generate Progress Image</button>
-        <button id="generate-share-text">Generate Share Text</button>        
+        <button id="generate-image-btn">Get Progress Image</button>
+        <button id="generate-share-text">Get Share Text</button>        
         <textarea id="share-text-output" rows="3" readonly placeholder="Click button to generate text to share on X..."></textarea>
     </div>
 
@@ -76,7 +77,7 @@
                     <th>WORKOUT #</th>
                     <th>ACTIVITY</th>
                     <th>GOAL</th>
-                    <th>ACTUAL</th>
+                    <th>ACTUAL <span class="tooltip" title="Laps are assumed as 100 meters per lap." style="color: lime;"><i class="fa-regular fa-circle-question"></i></span></th>
                 </tr>
             </thead>
             <tbody id="workout-table-body">
