Added source for WORKOUTenstein and link to it on main page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <button id="generate-image-btn">Get Progress Image</button>
         <button id="generate-share-text">Get Share Text</button>        
         <textarea id="share-text-output" rows="3" readonly placeholder="Click button to generate text to share on X..."></textarea>
+        <div class="github-link" style="margin: 0px auto;"><a href="https://workoutenstein.tiiny.site/">Need a random warmup? Try this: <u>workoutenstein.tiiny.site</u></a></div>
     </div>
 
     <div class="table-container">
